@@ -26,6 +26,7 @@ with 'Data::BitStream::Base',
      'Data::BitStream::Code::ARice',
      'Data::BitStream::Code::Additive',
      'Data::BitStream::Code::Comma',
+     'Data::BitStream::Code::Taboo',
      'Data::BitStream::Code::StartStop';
 
 use Data::BitStream::XS 0.04;
